Revision history for Perl extension Metabrik.

1.20.6
   - bugfix: core::shell: run_run Command to call execute Command from shell::history and not 
             exec Command
   - update: core::log: brik_preinit() moved from Repository log::* so replacing a log Brik
             by another one becomes transparent for users.

1.20.5 Fri Jan 29 18:57:06 CET 2016
   - bugfix: Metabrik: brik_help_run_empty_array_arg Command to check if Argument is an ARRAY

1.20.4 Tue Jan 26 21:01:10 CET 2016
   - update: metabrik: do not prefix help strings with Brik name nor Command name when user 
             fails to use a Command the right wat
   - bugfix: core::shell: display Brik name and Command name when user calls the help Command

1.20.3 Tue Jan 19 14:17:32 CET 2016
   - bugfix: makes logging to STDOUT unbuffered by default when using core::log

1.20.2 Wed Jan 13 18:41:49 CET 2016
   - bugfix: now truly disable all code to rewrite aliases to complete command: broken with 
             Term::ReadLine::Gnu >= 1.27
             And put alias_completion Attribute to 0 by default.

1.20.1 Tue Jan 12 20:18:55 CET 2016
   - bugfix: disabled code to rewrite aliases to complete command: broken with 
             Term::ReadLine::Gnu >= 1.27

1.20.0 Sat Jan  2 18:49:52 CET 2016
   - FEATURE: core::context: allow one-liners with a Brik Command. Example:
     perl -MMetabrik::Core::Context -e 'Metabrik::Core::Context->new_brik_run("client::dns", "mx_lookup", "gmail.com")'
   - FEATURE: core::context: allow to pass Code, ARRAY or HASH as Argument to set Command
   - FEATURE: core::global: repository Attribute to store default Briks repository
   - FEATURE: easy update: thanks to brik::tool from Repository
   - FEATURE: pod: most of the documentation is written
   - FEATURE: Metabrik: need_packages and need_services Properties to easy installation of 
              needed packages and services to start.
   - UPDATE: Metabrik: only core::* Briks now, all others moved to Repository